--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -9,12 +9,12 @@
     <title>Alura Space</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/styles/style.css' %}">
-
 </head>
 
 <body>
+
     <div class="pagina-inicial">
         <header class="cabecalho">
             <img src="{% static '/assets/logo/Logo(2).png' %}" alt="Logo da Alura Space" />
@@ -28,7 +28,7 @@
         <main class="principal">
             <section class="menu-lateral">
                 <nav class="menu-lateral__navegacao">
-                    <a href="index.html"><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}"> Home</a>
+                    <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}"> Home</a>
                     <a href="#"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Mais vistas</a>
                     <a href="#"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Novas</a>
                     <a href="#"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Surpreenda-me</a>
@@ -50,17 +50,6 @@
             </section>
         </main>
     </div>
-    <footer class="rodape">
-        <div class="rodape__icones">
-            <a href="https://twitter.com/AluraOnline" target=”_blank” >
-                <img src="{% static '/assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
-            </a>
-            <a href="https://www.instagram.com/aluraonline/" target=”_blank” >
-                <img src="{% static '/assets/ícones/1x/instagram.png' %}" alt="ícone instagram">
-            </a>
-        </div>
-        <p class="rodape__texto">Desenvolvido por Alura</p>
-    </footer>
+    {% include 'galeria/partials/_footer.html' %}
 </body>
-
 </html>
